Add LFWin payment adapter layer
